Fix some bug regarding adaptation

--- a/html-files/feedback.html
+++ b/html-files/feedback.html
@@ -537,7 +537,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
     </div>
 </div>
 
-<!--Toast,feedback submitted message .Upon submit button is pressed ,this toast will be triggered-->-->
+<!--Toast,feedback submitted message .Upon submit button is pressed ,this toast will be triggered-->
 <div class=" position-fixed bottom-0 end-0 p-3 zindex99" >
 <div class="toast-container">
     <div class="toast" id="sucessfd" role="alert"  data-bs-autohide="false" aria-live="assertive" aria-atomic="true" >
