--- a/html-files/index.html
+++ b/html-files/index.html
@@ -201,26 +201,26 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
                    <!--Captions for different image while slideshow.Photo slideshow change every 2 second(2000ms)-->
                    <div class="carousel-inner">
                        <div class="carousel-item active" data-bs-interval="2000">
-                           <img src="../secondaryschoolphoto/presentationcarousel/soop2019.jpg"  class="d-block w-100 photocarousel" alt="Image of Secondary One Orientation Programme 2019 ">
+                           <img src="../secondaryschoolphoto/presentationcarousel/soop2019.jpg"  class="d-block w-100 img-fluid" alt="Image of Secondary One Orientation Programme 2019 ">
                            <div class="carousel-caption d-none d-md-block">
                                <h5>Secondary One Orientation Programme 2019</h5>
                            </div>
                        </div>
                        <div class="carousel-item" data-bs-interval="2000">
-                           <img src="../secondaryschoolphoto/presentationcarousel/3opalclassphoto.jpg"   class="d-block w-100 photocarousel" alt="Image of 3 Opal Racial Harmony Day 2019">
+                           <img src="../secondaryschoolphoto/presentationcarousel/3opalclassphoto.jpg"   class="d-block w-100 img-fluid" alt="Image of 3 Opal Racial Harmony Day 2019">
                            <div class="carousel-caption d-none d-md-block">
                                <h5>3 Opal Racial Harmony Day 2019</h5>
                            </div>
                        </div>
                        <div class="carousel-item" data-bs-interval="2000">
-                           <img src="../secondaryschoolphoto/presentationcarousel/studentcouncilinvestiture.jpg"   class="d-block w-100 photocarousel" alt="Image of 15th Student Council Investiture 2019">
+                           <img src="../secondaryschoolphoto/presentationcarousel/studentcouncilinvestiture.jpg"   class="d-block w-100 img-fluid" alt="Image of 15th Student Council Investiture 2019">
                            <div class="carousel-caption d-none d-md-block">
                                <h5>15th Student Council Investiture 2019</h5>
 
                            </div>
                        </div>
                        <div class="carousel-item" data-bs-interval="2000">
-                           <img src="../secondaryschoolphoto/presentationcarousel/studentcouncilinvestiture2.jpg"  class="d-block w-100 photocarousel" alt="Image of 15th Student Council Investiture 2019">
+                           <img src="../secondaryschoolphoto/presentationcarousel/studentcouncilinvestiture2.jpg"  class="d-block w-100 img-fluid" alt="Image of 15th Student Council Investiture 2019">
                            <div class="carousel-caption d-none d-md-block">
                                <h5>15th Student Council Investiture 2019</h5>
 
@@ -228,44 +228,44 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
                        </div>
 
                        <div class="carousel-item" data-bs-interval="2000">
-                           <img src="../secondaryschoolphoto/presentationcarousel/cnyperformance2019.jpg"   class="d-block w-100 photocarousel" alt="Image of Chinese New Year Celebration Performance 2019">
+                           <img src="../secondaryschoolphoto/presentationcarousel/cnyperformance2019.jpg"   class="d-block w-100 img-fluid" alt="Image of Chinese New Year Celebration Performance 2019">
                            <div class="carousel-caption d-none d-md-block">
                                <h5>Chinese New Year Celebration Performance 2019</h5>
                            </div>
                        </div>
                        <div class="carousel-item" data-bs-interval="2000">
-                           <img src="../secondaryschoolphoto/presentationcarousel/cnyperformance2019overallphoto.jpg"  class="d-block w-100 photocarousel" alt="Image of Chinese New Year Celebration Performance 2019">
+                           <img src="../secondaryschoolphoto/presentationcarousel/cnyperformance2019overallphoto.jpg"  class="d-block w-100 img-fluid" alt="Image of Chinese New Year Celebration Performance 2019">
                            <div class="carousel-caption d-none d-md-block">
                                <h5>Chinese New Year Celebration Performance 2019</h5>
                            </div>
                        </div>
                        <div class="carousel-item" data-bs-interval="2000">
-                           <img src="../secondaryschoolphoto/presentationcarousel/soop2019organisingcommittee.jpg"   class="d-block w-100 photocarousel" alt="Image of SOOP 2019 Organising Committee">
+                           <img src="../secondaryschoolphoto/presentationcarousel/soop2019organisingcommittee.jpg"   class="d-block w-100 img-fluid" alt="Image of SOOP 2019 Organising Committee">
                            <div class="carousel-caption d-none d-md-block">
                                <h5>Secondary One Orientation Programme 2019 <br>Organising Committee</h5>
                            </div>
                        </div>
                        <div class="carousel-item" data-bs-interval="2000">
-                           <img src="../secondaryschoolphoto/presentationcarousel/nationaldayphoto.jpg"   class="d-block w-100 photocarousel" alt="Photo of National Day Celebration 2020 ">
+                           <img src="../secondaryschoolphoto/presentationcarousel/nationaldayphoto.jpg"   class="d-block w-100 img-fluid" alt="Photo of National Day Celebration 2020 ">
                            <div class="carousel-caption d-none d-md-block">
                                <h5>National Day Celebration 2020</h5>
                            </div>
                        </div>
 
                        <div class="carousel-item" data-bs-interval="2000">
-                           <img src="../secondaryschoolphoto/presentationcarousel/meettheparentdinner.jpg"   class="d-block w-100 photocarousel" alt="Image of Dinner of Meet The Parent Session 2020">
+                           <img src="../secondaryschoolphoto/presentationcarousel/meettheparentdinner.jpg"   class="d-block w-100 img-fluid" alt="Image of Dinner of Meet The Parent Session 2020">
                            <div class="carousel-caption d-none d-md-block">
                                <h5>Dinner of Meet The Parent Session 2020</h5>
                            </div>
                        </div>
                        <div class="carousel-item" data-bs-interval="2000">
-                           <img src="../secondaryschoolphoto/presentationcarousel/cnyperformance2019teamphoto.jpg"  class="d-block w-100 photocarousel" alt="Image of Chinese New Year Celebration Performance 2019">
+                           <img src="../secondaryschoolphoto/presentationcarousel/cnyperformance2019teamphoto.jpg"  class="d-block w-100  img-fluid" alt="Image of Chinese New Year Celebration Performance 2019">
                            <div class="carousel-caption d-none d-md-block">
                                <h5>Chinese New Year Celebration Performance 2019</h5>
                            </div>
                        </div>
                        <div class="carousel-item" data-bs-interval="2000">
-                           <img src="../secondaryschoolphoto/presentationcarousel/sltc2020.jpg"   class="d-block w-100 photocarousel" alt="Image of SLTC 2020 Facilitator Committee ">
+                           <img src="../secondaryschoolphoto/presentationcarousel/sltc2020.jpg"   class="d-block w-100 img-fluid" alt="Image of SLTC 2020 Facilitator Committee ">
                            <div class="carousel-caption d-none d-md-block">
                                <h5>Student Leader Training Camp 2020 <br>Facilitator Committee</h5>
                            </div>
