--- a/html-files/sp.html
+++ b/html-files/sp.html
@@ -132,7 +132,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
         <div class="row text-center textfly">
             <div class="col-12 text-center">
                 <!-- Centered class photo wigth fade effect-->
-                <img alt="Image of DAAA Class Photo" class='greyscale daaacoverphoto' id="daaaimg" src="../spphoto/daaaclassphoto.jpg" >
+                <img alt="Image of DAAA Class Photo" class='greyscale daaacoverphoto img-fluid' id="daaaimg" src="../spphoto/daaaclassphoto.jpg" >
 
             </div>
             <div class="col-12 text-center">
