--- a/html-files/about.html
+++ b/html-files/about.html
@@ -227,8 +227,8 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
         <div class="col-md-6 col-sm-12 text-end">
             <br><br>
             <!-- A table showing previous education-->
-            <table class="table table-bordered border-dark table-hover table-responsive">
-                <thead>
+            <table class="table table-bordered border-dark table-hover table-responsive table-light">
+                <thead class="table-dark">
                 <tr>
                     <th scope="col">#</th>
                     <th scope="col">Education Institute </th>
@@ -276,8 +276,8 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
         </div>
         <!--Table that occupy left half of the line for medium and above screen ,full line for small screen-->
         <div class="col-md-6 col-sm-12">
-            <table class="table table-bordered border-dark  table-responsive table-sm">
-                <thead>
+            <table class="table table-bordered border-dark  table-responsive table-sm table-light">
+                <thead class="table-dark">
                 <tr>
                     <th scope="col">#</th>
                     <th scope="col">Competition </th>
@@ -383,8 +383,8 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
         </div>
         <!--Table that occupy left right of the line for medium and above screen ,full line for small screen-->
         <div class="col-md-6 col-sm-12">
-            <table class="table table-bordered border-dark table-hover table-responsive table-sm">
-                <thead>
+            <table class="table table-bordered border-dark table-hover table-responsive table-sm table-light">
+                <thead class="table-dark">
                 <tr>
                     <th scope="col">#</th>
                     <th scope="col">Certification And Skills</th>
