--- a/html-files/secondary.html
+++ b/html-files/secondary.html
@@ -279,8 +279,8 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
             </div>
             <!-- table of leadership development ,appear below text at center,occupy full line-->
             <div class="col-md-12 col-sm-12">
-                <table class="table table-hover table-bordered border-dark  table-responsive">
-                    <thead>
+                <table class="table table-hover table-bordered border-dark  table-responsive table-light">
+                    <thead class="table-dark">
                     <tr>
                         <th scope="col">Leadership Development</th>
                         <th scope="col">Involvement Name</th>
