Some layout touch-up

--- a/html-files/about.html
+++ b/html-files/about.html
@@ -163,7 +163,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
         </div>
             <!--Occupy right half of line for screen above medium and full line for small screen-->
             <!--A 3D photo slideshow-->
-        <div class='col-sm-12 col-md-6 d-flex justify-content-end align-item-end'>
+        <div class='offset-md-2 col-md-4 col-sm-12 about1'>
             <section id="slider">
                 <input type="radio" name="slider" id="s1" checked>
                 <input type="radio" name="slider" id="s2">
@@ -187,7 +187,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
             <!-- Occupy left half of line for screen above medium and full line for small screen-->
             <div class="col-md-6 col-sm-12">
                 <!--Photo imcorpoerate with javascript for fade effect-->
-<img src="../aboutmephoto/mesciencecenter.jpg" alt="Image of ZhuoFan at Science Center" id="photofly" class="textfly photoeffectabout" >
+<img src="../aboutmephoto/mesciencecenter.jpg" alt="Image of ZhuoFan at Science Center" id="photofly" class="textfly photoeffectabout img-fluid" >
             </div>
             <!-- Occupy right half of line for screen above medium and full line for small screen-->
             <div class="col-md-6 col-sm-12 text-end">
@@ -224,10 +224,10 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
             <p>I am previously a student in Dunearn Secondary School and currently a student in Singapore Polytechnic </p>
         </div>
         <!-- Occupy right half of line for screen above medium and full line for small screen-->
-        <div class="col-md-6 col-sm-12 text-end">
+        <div class="col-md-6 col-sm-12 ">
             <br><br>
             <!-- A table showing previous education-->
-            <table class="table table-bordered border-dark table-hover table-responsive table-light">
+            <table class="table table-bordered border-dark table-hover table-responsive table-light table-sm">
                 <thead class="table-dark">
                 <tr>
                     <th scope="col">#</th>
@@ -280,9 +280,9 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
                 <thead class="table-dark">
                 <tr>
                     <th scope="col">#</th>
-                    <th scope="col">Competition </th>
+                    <th scope="col">Competition</th>
                     <th scope="col">Award</th>
-                    <th scope="col">Year Of Participation</th>
+                    <th scope="col">Year  </th>
                 </tr>
                 </thead>
                 <tbody>
