--- a/html-files/secondary.html
+++ b/html-files/secondary.html
@@ -283,9 +283,9 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
                     <thead class="table-dark">
                     <tr>
                         <th scope="col">Leadership Development</th>
-                        <th scope="col">Involvement Name</th>
+                        <th scope="col">Involvement</th>
                         <th scope="col">Year</th>
-                        <th scope="col">Level of Attainment (MAX 5)</th>
+                        <th scope="col">Level of Attainment</th>
                     </tr>
                     </thead>
                     <tbody>
