--- a/html-files/future.html
+++ b/html-files/future.html
@@ -185,7 +185,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
         <!-- Occupy right half of line for screen above medium,full line for small-->
         <div class="col-md-6 col-sm-12 text-end " >
             <!--Image from Singapore Polytechnic Website ,https://www.sp.edu.sg/soc/courses/full-time-diplomas/data-analytics-and-artificial-intelligence-(ai)/overview-->
-            <img alt="Image of DAAA Course Info" src="../spphoto/daaacourseinfo.jpg" id="daaaphoto">
+            <img alt="Image of DAAA Course Info" src="../spphoto/daaacourseinfo.jpg"  class="daaaphoto img-fluid">
 
         </div>
     </div>
