Final layout touch-up regarding cards

--- a/html-files/future.html
+++ b/html-files/future.html
@@ -194,7 +194,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
 <!-- Start of second section-->
 <div class="container-fluid margintop grey">
     <div class="container">
-        <div class="row" id="expsp">
+        <div class="row justify-content-center" id="expsp">
             <!--2 Boxes each occupying 6 grid at small screen ,3 at medium ,6 at large and 3 in extra large-->
             <div class="catt col-xl-3 col-md-3 col-lg-6 col-sm-6" >
                <!--Card 1-->
