--- a/html-files/index.html
+++ b/html-files/index.html
@@ -314,7 +314,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
     <h1>More <span class="slategry">Options</span></h1>
     <br><br>
 
-    <div class=" row">
+    <div class=" row justify-content-center">
 <!--4 spinning card element ,appear all 4 in extralarge screen,2 in medium ,1 in small screen-->
     <div class="catt col-lg-4 col-md-6 col-sm-12 col-xl-3">
  <!--Card 1 (on hover flip to backside-->
