--- a/html-files/about.html
+++ b/html-files/about.html
@@ -440,8 +440,9 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
 </div>
 <!-- End of fifth section-->
 <!--Start of sixth section-->
+<!--Testimonials-->
 <div class="container margintop ">
-    <div class="row" id="testimonial">
+    <div class="row justify-content-center" id="testimonial">
         <!-- Occupy full line-->
         <div class="col-sm-12 col-md-12 text-center">
             <!--Colored subtitle-->
